@@ -1,7 +1,7 @@
 name = ForwardIterables
 
 [ReadmeFromPod]
-filename = lib/ForwardIterables.rakumod
+filename = doc/ForwardIterables.rakudoc
 
 [UploadToZef]
 
