@@ -1,6 +1,7 @@
 Revision history for ForwardIterables
 
 {{$NEXT}}
+    - Fix doc generation issue
 
 0.0.3  2025-01-15T19:38:26+01:00
     - Fix issue with subclassing and .push-all
